crates/ruff_python_parser/tests/snapshots/valid_syntax@decorator_expression_eval_hack_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/decorator_expression_eval_hack_py38.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..97,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 45..96,
                    is_async: false,
                    decorator_list: [
                        Decorator {
                            range: 45..80,
                            node_index: NodeIndex(None),
                            expression: Call(
                                ExprCall {
                                    node_index: NodeIndex(None),
                                    range: 46..80,
                                    func: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 46..50,
                                            id: Name("eval"),
                                            ctx: Load,
                                        },
                                    ),
                                    arguments: Arguments {
                                        range: 50..80,
                                        node_index: NodeIndex(None),
                                        args: [
                                            StringLiteral(
                                                ExprStringLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 51..79,
                                                    value: StringLiteralValue {
                                                        inner: Single(
                                                            StringLiteral {
                                                                range: 51..79,
                                                                node_index: NodeIndex(None),
                                                                value: "buttons[0].clicked.connect",
                                                                flags: StringLiteralFlags {
                                                                    quote_style: Double,
                                                                    prefix: Empty,
                                                                    triple_quoted: false,
                                                                    unclosed: false,
                                                                },
                                                            },
                                                        ),
                                                    },
                                                },
                                            ),
                                        ],
                                        keywords: [],
                                    },
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("spam"),
                        range: 85..89,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 89..91,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 93..96,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 93..96,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
